--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vCard - Personal Portfolio</title>
+    <title>Personal Portfolio</title>
 
     <!--
     - favicon
   -->
     <link
       rel="shortcut icon"
-      href="./assets/images/logo.ico"
+      href="./assets/images/logo-N.webp"
       type="image/x-icon"
     />
+
 
     <!--
     - custom css link
