--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   -->
     <link
       rel="shortcut icon"
-      href="./assets/images/logo-N.webp"
+      href="./assets/images/logo_N.webp"
       type="image/x-icon"
     />
 
