update academics section

--- a/index.html
+++ b/index.html
@@ -313,17 +313,17 @@
                 <span>2019 — 2020</span>
 
                 <p class="timeline-text">
-                  Passed my High Shooling with an aggregate of 81%.
+                  Passed my High Shooling with an aggregate of 80%.
                 </p>
               </li>
 
               <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Koormanchal academy,Amo</h4>
+                <h4 class="h4 timeline-item-title">Koormanchal academy,Almora</h4>
 
                 <span>2021-2022</span>
 
                 <p class="timeline-text">
-                  Passed my 12th with an aggregate of 84%.
+                  Passed my 12th with an aggregate of 86%.
                 </p>
               </li>
 
