--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="sidebar-info">
           <figure class="avatar-box">
             <img
-              src="./assets/images/mypic.jpg"
+              src="./assets/images/my-avatar.jpg"
               alt="Richard hanrick"
               width="80"
             />
