added a resume button

--- a/index.html
+++ b/index.html
@@ -433,6 +433,14 @@
                 </div>
               </li>
             </ul>
+
+            
+            <!-- Get resume section: -->
+            <section class="resume-section">
+              <button onclick="window.open('assets/images/my_resume.pdf', '_blank')" class="form-btn" type="submit">
+                <span>Get Resume</span></button>
+          </section>
+            
           </section>
         </article>
 
