--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
             
             <!-- Get resume section: -->
             <section class="resume-section">
-              <button onclick="window.open('assets/images/my_resume.pdf', '_blank')" class="form-btn" type="submit">
+              <button onclick="window.open('assets/images/NEERAJ_RESUME.pdf', '_blank')" class="form-btn" type="submit">
                 <span>Get Resume</span></button>
           </section>
             
