--- a/index.html
+++ b/index.html
@@ -422,6 +422,18 @@
                   <div class="skill-progress-fill" style="width: 70%"></div>
                 </div>
               </li>
+
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Git & Github</h5>
+                  <data value="50">75%</data>
+                </div>
+
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width:75%"></div>
+                </div>
+              </li>
+              
               <li class="skills-item">
                 <div class="title-wrapper">
                   <h5 class="h5">Data Structure's & Algorithms</h5>
