updated school info

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 <span>2021-2022</span>
 
                 <p class="timeline-text">
-                  Passed my 12th with an aggregate of 86%.
+                  Passed my 12th from ICSE Board with an aggregate of 86%.
                 </p>
               </li>
 
