--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                     </div>
 
                     <img
-                      src="./assets/images/project-1.jpg"
+                      src="spotify-img1.webp"
                       alt="spotify"
                       loading="lazy"
                     />
@@ -540,7 +540,7 @@
                     </div>
 
                     <img
-                      src="./assets/images/project-2.png"
+                      src="Neeraj1.jpg"
                       alt="portfolio"
                       loading="lazy"
                     />
