added github link

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                 data-filter-item
                 data-category="web development"
               >
-                <a href="#">
+                <a href="https://negineeraj1.github.io/Spotify-clone/">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
@@ -533,7 +533,7 @@
                 data-filter-item
                 data-category="web development"
               >
-                <a href="#">
+                <a href="https://negineeraj1.github.io/Portfolio1/">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
